examples/header-router/envoy.yaml
static_resources:
  listeners:
    - name: header-router
      address:
        socket_address: { address: 127.0.0.1, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: header_router
                http_filters:
                  - name: header-router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                      dynamic_module_config:
                        name: header-router
                      filter_name: header-router
                      filter_config:
                        "@type": type.googleapis.com/google.protobuf.StringValue
                        value: '{}'
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: header-router
                  virtual_hosts:
                    - name: local
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: backends }

  clusters:
    - name: backends
      connect_timeout: 5s
      type: STATIC
      load_assignment:
        cluster_name: backends
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 8080 }
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 8081 }

admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
